# simplictea

./: Cargo.toml  README.md
Examples/: example1.spt  testing.spt
cwrite/: Cargo.toml
cwrite/src/: functionw.rs  lib.rs  returnw.rs  variablew.rs
ir/: Cargo.toml
ir/src/: gen_statement.rs  ir.rs  ir_impl.rs  lib.rs
lex_validator/: Cargo.toml
lex_validator/src/: decimal.rs  double_operator.rs  error_handler.rs  if_else.rs  key_operators.rs  lextypechecker.rs  lib.rs
lexer/src/: identifier.rs  keywords.rs  lex.rs  lib.rs  literal.rs  operator.rs  stc.rs  token_type.rs  token_type_impl.rs  tokenizer.rs
parser/: Cargo.toml
parser/src/: #parsingdata.rs#  .#parsingdata.rs  ast.rs  binaryexp.rs  binaryexp_handle.rs  binaryexp_helpers.rs  binaryexp_impl.rs  binaryexp_traits.rs  collector.rs  expression_parser.rs  expressions.rs  function.rs  function_call.rs  function_grammer.rs  function_helpers.rs  function_return.rs  function_traits.rs  global.rs  grammer.rs  helper.rs  iterator.rs  iterator_traits.rs  lib.rs  parser.rs  parser_impl.rs  parsing_symbols.rs  parsingdata.rs  scope.rs  statement_parser.rs  variable.rs
sibyte/: Cargo.toml
silexer/: Cargo.toml
silexer/src/: lib.rs  silex.rs
siparser/: Cargo.toml
siparser/src/: ast.rs  error.rs  helpers.rs  lib.rs  siparser.rs
sitable/: Cargo.toml
sitable/src/: lib.rs  sitable.rs
src/: main.rs
symboltable/: Cargo.toml
symboltable/src/: lib.rs  symbol.rs  symbol_traits.rs
target_qbe/: Cargo.toml
target_qbe/src/: binary_exp.rs  functions.rs  functions.rs~  gen_ir.rs  helpers.rs  lib.rs  (+1 more)
(+5 files in other folders)
